--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<style>
+		h1::first-letter{
+			color: blue;
+		}
+		p::after {
+			content: " - Remember this";
+		}
+		* {
+     			box-sizing: border-box;
+   		}
+	</style>
 </head>
-<style>
-
-</style>
 <body>
+	<h1>Welcome</h1>
 
+	<p>My name is Donald</p>
+	<p>I live in Ducksburg</p>
 
-
+	<p><b>Note:</b> For this selector to work in IE8, a DOCTYPE must be declared, 
+	and you must use the old single-colon CSS2 syntax (:after instead of ::after).
+	</p>
 	
 </body>
 </html>
